[gd_scene load_steps=28 format=3 uid="uid://6ed75hht2eg2"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_8fkf8"]
[ext_resource type="PackedScene" uid="uid://7jvwmpcr1ca1" path="res://scenes/player/assets/backrooms guy.blend" id="1_mna6d"]
[ext_resource type="Script" path="res://scenes/player/player_input.gd" id="2_j0yv7"]
[ext_resource type="Texture2D" uid="uid://gmjnovumqg8h" path="res://assets/textures/frame-001.png" id="4_yf4pf"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_q12l1"]
properties/0/path = NodePath(".:motion")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:transform")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:player_id")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("player_model:rotation")
properties/3/spawn = true
properties/3/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_s8cli"]
properties/0/path = NodePath("input_synchronizer:motion")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("camera_base:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("camera_base/camera_rot:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("input_synchronizer:movement_state")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("input_synchronizer:interaction_state")
properties/4/spawn = true
properties/4/replication_mode = 1

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sy1gy"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_htxmu"]
animation = &"tail_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ij66k"]
animation = &"carry"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_so4wi"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_3fmce"]
filter_enabled = true
filters = ["metarig/Skeleton3D:forearm.L", "metarig/Skeleton3D:forearm.R", "metarig/Skeleton3D:hand.L", "metarig/Skeleton3D:hand.R", "metarig/Skeleton3D:upper_arm.L", "metarig/Skeleton3D:upper_arm.R"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x41mu"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8g83y"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8ib1g"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8wg03"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8et0p"]
animation = &"idle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_4dcbh"]
blend_point_0/node = SubResource("AnimationNodeAnimation_x41mu")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_8g83y")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_8ib1g")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_8wg03")
blend_point_3/pos = Vector2(0, -1)
blend_point_4/node = SubResource("AnimationNodeAnimation_8et0p")
blend_point_4/pos = Vector2(0, 0)

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_exmpv"]
input_0/name = "walk"
input_0/auto_advance = false
input_0/break_loop_at_end = false
input_0/reset = true
input_1/name = "run"
input_1/auto_advance = false
input_1/break_loop_at_end = false
input_1/reset = true

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_np8wq"]
filter_enabled = true
filters = ["metarig/Skeleton3D:pelvis.R.001", "metarig/Skeleton3D:pelvis.R.002", "metarig/Skeleton3D:pelvis.R.003", "metarig/Skeleton3D:pelvis.R.004", "metarig/Skeleton3D:pelvis.R.005", "metarig/Skeleton3D:pelvis.R.006"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xevgk"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d8dos"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r05b1"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ibcc3"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ydyn0"]
animation = &"idle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_n6lt7"]
blend_point_0/node = SubResource("AnimationNodeAnimation_xevgk")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_d8dos")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_r05b1")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_ibcc3")
blend_point_3/pos = Vector2(0, -1)
blend_point_4/node = SubResource("AnimationNodeAnimation_ydyn0")
blend_point_4/pos = Vector2(0, 0)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_lltdd"]
graph_offset = Vector2(-607.207, -13.641)
nodes/Animation/node = SubResource("AnimationNodeAnimation_ij66k")
nodes/Animation/position = Vector2(-60, 280)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_htxmu")
"nodes/Animation 2/position" = Vector2(120, 340)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_so4wi")
nodes/TimeScale/position = Vector2(-60, 120)
nodes/carry/node = SubResource("AnimationNodeBlend2_3fmce")
nodes/carry/position = Vector2(120, 120)
nodes/output/position = Vector2(520, 120)
nodes/run/node = SubResource("AnimationNodeBlendSpace2D_4dcbh")
nodes/run/position = Vector2(-540, 280)
nodes/state/node = SubResource("AnimationNodeTransition_exmpv")
nodes/state/position = Vector2(-260, 120)
nodes/tail_idle/node = SubResource("AnimationNodeBlend2_np8wq")
nodes/tail_idle/position = Vector2(320, 120)
nodes/walk/node = SubResource("AnimationNodeBlendSpace2D_n6lt7")
nodes/walk/position = Vector2(-540, 60)
node_connections = [&"TimeScale", 0, &"state", &"carry", 0, &"TimeScale", &"carry", 1, &"Animation", &"output", 0, &"tail_idle", &"state", 0, &"walk", &"state", 1, &"run", &"tail_idle", 0, &"carry", &"tail_idle", 1, &"Animation 2"]

[sub_resource type="SphereShape3D" id="SphereShape3D_722in"]

[node name="player" type="CharacterBody3D" node_paths=PackedStringArray("carry_point", "tool_point", "camera_look_point")]
collision_layer = 2
script = ExtResource("1_8fkf8")
carry_point = NodePath("player_model/carry_point")
tool_point = NodePath("player_model/tool_point")
camera_look_point = NodePath("camera_base/camera_rot/SpringArm3D/Camera3D/camera_look_point")

[node name="server_synchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_q12l1")

[node name="input_synchronizer" type="MultiplayerSynchronizer" parent="." node_paths=PackedStringArray("camera_base", "camera_rot", "camera_camera", "interact_ray")]
replication_config = SubResource("SceneReplicationConfig_s8cli")
script = ExtResource("2_j0yv7")
camera_base = NodePath("../camera_base")
camera_rot = NodePath("../camera_base/camera_rot")
camera_camera = NodePath("../camera_base/camera_rot/SpringArm3D/Camera3D")
interact_ray = NodePath("../camera_base/camera_rot/SpringArm3D/Camera3D/interact_ray")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.998934, 0)
shape = SubResource("CapsuleShape3D_sy1gy")

[node name="player_model" parent="." instance=ExtResource("1_mna6d")]

[node name="Skeleton3D" parent="player_model/metarig" index="0"]
bones/1/position = Vector3(0, 0.954737, -0.0565858)
bones/1/rotation = Quaternion(0.12582, 0, 0, 0.992053)
bones/3/rotation = Quaternion(-0.0774641, 0, 0, 0.996995)
bones/4/rotation = Quaternion(0.0022897, 1.04684e-20, -3.46635e-19, 0.999997)
bones/5/rotation = Quaternion(0.201738, 0, 0, 0.97944)
bones/5/scale = Vector3(1, 1, 1)
bones/8/position = Vector3(0.0187285, 0.140683, 0.0796443)
bones/8/rotation = Quaternion(-0.555543, -0.397177, -0.379756, 0.624025)
bones/9/rotation = Quaternion(-0.394709, 0.660512, -0.538014, 0.344196)
bones/10/rotation = Quaternion(0.216393, -0.104726, 0.0557407, 0.969071)
bones/10/scale = Vector3(1, 1, 1)
bones/11/rotation = Quaternion(0.00622386, 0.0324448, 0.023848, 0.99917)
bones/11/scale = Vector3(1, 1, 1)
bones/12/position = Vector3(-0.0187285, 0.14065, 0.0807867)
bones/12/rotation = Quaternion(-0.544597, 0.414689, 0.396265, 0.611899)
bones/13/rotation = Quaternion(-0.313661, -0.52159, 0.655062, 0.447722)
bones/14/rotation = Quaternion(0.0817242, 0.08218, -0.0567615, 0.991638)
bones/14/scale = Vector3(1, 1, 1)
bones/15/rotation = Quaternion(0.00622383, -0.0324448, -0.023848, 0.99917)
bones/15/scale = Vector3(1, 1, 1)
bones/16/rotation = Quaternion(-0.691956, 0.00859564, 0.0346581, 0.721056)
bones/16/scale = Vector3(1, 1, 1)
bones/17/rotation = Quaternion(-0.152455, -0.793331, -0.285504, 0.515627)
bones/17/scale = Vector3(1, 1, 1)
bones/18/rotation = Quaternion(-0.152455, 0.793331, 0.285504, 0.515627)
bones/18/scale = Vector3(1, 1, 1)
bones/19/rotation = Quaternion(0.941073, -0.0441355, 0.0180048, 0.334829)
bones/19/scale = Vector3(1, 1, 1)
bones/20/rotation = Quaternion(0.592661, -0.00538845, -0.082125, 0.801236)
bones/21/rotation = Quaternion(-0.562768, 0.0536366, 0.0903941, 0.819905)
bones/22/rotation = Quaternion(0.0853006, 0.750558, -0.654846, -0.0237195)
bones/22/scale = Vector3(1, 1, 1)
bones/24/rotation = Quaternion(0.991133, 0.0537134, -0.0360086, 0.116076)
bones/24/scale = Vector3(1, 1, 1)
bones/25/rotation = Quaternion(0.560855, 0.00817242, 0.0678815, 0.825086)
bones/26/rotation = Quaternion(-0.437736, -0.0611416, -0.07232, 0.894102)
bones/27/rotation = Quaternion(-0.107751, 0.671787, -0.732863, -0.00190751)
bones/27/scale = Vector3(1, 1, 1)
bones/29/rotation = Quaternion(-0.799126, -3.47149e-09, 0.00659616, 0.601127)
bones/30/rotation = Quaternion(0.0142947, 1.91476e-09, -0.00411487, 0.999889)
bones/30/scale = Vector3(1, 1, 1)
bones/31/rotation = Quaternion(-0.00595179, -9.24234e-10, 6.20744e-05, 0.999982)
bones/31/scale = Vector3(1, 1, 1)
bones/32/rotation = Quaternion(0.0111595, -2.31914e-10, -0.000116388, 0.999938)
bones/32/scale = Vector3(1, 1, 1)
bones/33/rotation = Quaternion(-0.0220526, 9.46705e-10, 0.000229999, 0.999757)
bones/34/rotation = Quaternion(0.0168457, -6.774e-10, -0.000175693, 0.999858)
bones/35/position = Vector3(0.10046, 0.046817, 0.134594)
bones/35/rotation = Quaternion(-5.97701e-08, 0.780484, 0.625175, -4.9923e-08)
bones/36/position = Vector3(-0.10046, 0.0737121, -0.360848)
bones/36/rotation = Quaternion(5.63852e-08, 0.625183, 0.780479, 4.98789e-08)

[node name="carry_point" type="Marker3D" parent="player_model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.85228, 0)

[node name="tool_point" type="Marker3D" parent="player_model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.37265, 1.10671)

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../player_model")
root_motion_track = NodePath("metarig/Skeleton3D:root_motion")
tree_root = SubResource("AnimationNodeBlendTree_lltdd")
anim_player = NodePath("../player_model/AnimationPlayer")
parameters/TimeScale/scale = 1.5
parameters/carry/blend_amount = 0.0
parameters/run/blend_position = Vector2(1, 0)
parameters/state/current_state = "walk"
parameters/state/transition_request = ""
parameters/state/current_index = 0
parameters/tail_idle/blend_amount = 0
parameters/walk/blend_position = Vector2(1, 0)

[node name="RootMotionView" type="RootMotionView" parent="."]
animation_path = NodePath("../AnimationTree")

[node name="camera_base" type="Node3D" parent="."]
transform = Transform3D(-1, 2.51905e-08, 8.37149e-08, 0, 0.957586, -0.288146, -8.74228e-08, -0.288146, -0.957586, 0, 3.0904, 0)

[node name="camera_rot" type="Node3D" parent="camera_base"]

[node name="SpringArm3D" type="SpringArm3D" parent="camera_base/camera_rot"]
shape = SubResource("SphereShape3D_722in")
spring_length = 2.0

[node name="Camera3D" type="Camera3D" parent="camera_base/camera_rot/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0)

[node name="interact_ray" type="RayCast3D" parent="camera_base/camera_rot/SpringArm3D/Camera3D"]
target_position = Vector3(0, 0, -100)
collision_mask = 4

[node name="camera_look_point" type="Marker3D" parent="camera_base/camera_rot/SpringArm3D/Camera3D"]
transform = Transform3D(1, -1.24345e-14, 0, 0, 1, 0, 0, 0, 1, -2.40831e-06, 0.00172114, -28.3011)

[node name="ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="ui"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="ui/CenterContainer"]
modulate = Color(0.330239, 0.756528, 0, 1)
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
texture = ExtResource("4_yf4pf")

[editable path="player_model"]
